--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,8 +1,8 @@
 {
-  "welcome": "Manage your customers!",
-  "customersManagement": "Customers Management App",
+  "welcome": "Manage your customers",
+  "customersManagement": "Customers Manager",
   "ourProducts": "Our Products",
-  "aboutUs": "about us",
+  "aboutApp": "about the app",
   "about": "About",
   "home": "Home",
   "nameOfProduct": "name of product",
@@ -22,11 +22,10 @@
   "type": "type",
   "controls": "controls",
   "description": "Some Info About Product",
-  "500chars": " (500 characters)",
   "productPrice": "product price",
   "13digits": "(13 digits)",
   "productCharacteristics": "Product Characteristics",
-  "backToProducts": "back to products",
+  "backToCustomers": "back to list",
   "freeShipping": "free shipping",
   "active": "active",
   "featured": "featured",
@@ -45,20 +44,26 @@
   "productsRecentChangeQuantity": "Products' recent quantity changes",
   "lastFiveItems": "Last 5 items",
   "date": "Date",
+  "fullName": "Full Name",
   "name": "Name",
+  "email":"Email",
+  "city":"City",
+  "street":"Street",
+  "houseNumber":"House Number",
+  "zip":"Zip",
   "time": "Time",
   "$":"$",
   "units": "units",
   "upload": "Upload",
   "totalProducts": "total products",
-  "noMatch": "Sorry, no items matched your search",
+  "noMatch": "Sorry, no registered customers found",
   "noFeatured": "Sorry, no featured products are available",
   "noData":"Sorry, No recorded data",
-  "addNewProduct": "Add new customer",
+  "addNewCustomer": "Add new customer",
   "saveChanges": "Save changes",
   "goBack": "Go back",
   "deleteProduct": "Delete product",
-  "creteProduct": "Create product",
+  "registerNewUser": "Register",
   "editProduct": "Edit product",
   "viewProduct": "View product",
   "openColorMenu": "Open color menu",
