--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -1,9 +1,9 @@
 {
-  "welcome": "Sveiki atvykę į e-parduotuvę! ",
-  "customersManagement": "Elektronikos Parduotuvė",
+  "welcome": "Adminsitruokite savo klientus",
+  "customersManagement": "Klientų valdyba",
   "ourProducts": "Mūsų prekės",
   "about": "Apie mus",
-  "aboutUs": "apie mus",
+  "aboutApp": "apie mus",
   "home": "Pagrindinis",
   "customersList": "Prekių sąrašas",
   "products": "Prekės",
@@ -21,11 +21,10 @@
   "controls": "valdymas",
   "nameOfProduct": "Prekės pavadinimas",
   "description": "Informacija apie prekę",
-  "500chars": " (500 ženklų)",
   "productPrice": "prekės kaina",
   "13digits": "(13 skaitmenų)",
   "productCharacteristics": "Prekės Characteristikos",
-  "backToProducts": "atgal į prekių peržiūrą",
+  "backToCustomers": "atgal į prekių peržiūrą",
   "freeShipping": "nemokamas pristatymas",
   "active": "aktyvus",
   "featured": "matomas",
@@ -45,7 +44,13 @@
   "productsRecentChangePrice": "Naujausi prekių kainos kitimai",
   "lastFiveItems": "Paskutiniai 5 kitimai",
   "date": "Data",
-  "name": "Pavadinimas",
+  "fullName": "Vardas, pavardė",
+  "name": "Vardas",
+  "email": "Pašto adresas",
+  "city": "Miestas",
+  "street": "Gatvė",
+  "houseNumber": "Namo Numeris",
+  "zip": "Pašto adresas",
   "productsRecentChangeQuantity": "Naujausi prekių kiekio kitimai",
   "time": "Laikas",
   "units": "vienetai",
@@ -54,11 +59,11 @@
   "noMatch": "Atsiprašome, neradome prekės pagal jūsų pageidavimą",
   "noFeatured": "Atsiprašome, šiuo metu pagrindinių prekių nėra",
   "noData": "Duomenų nėra",
-  "addNewProduct": "Pridėti naują prekę",
+  "addNewCustomer": "Pridėti naują klientą",
   "saveChanges": "Išsaugoti",
   "goBack": "Atgal",
   "deleteProduct": "Ištrinti prekę",
-  "creteProduct": "Pridėti naują prekę",
+  "registerNewUser": "Registracija",
   "editProduct": "Redaguoti prekę",
   "viewProduct": "Žiūrėti prekę",
   "openColorMenu": "Spalvų paletė",
