--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,49 +1,11 @@
 {
   "welcome": "Manage your customers",
   "customersManagement": "Customers Manager",
-  "ourProducts": "Our Products",
-  "aboutApp": "about the app",
-  "about": "About",
+  "aboutApp": "About the app",
   "home": "Home",
-  "nameOfProduct": "name of product",
   "customersList": "Customers List",
-  "products": "products",
-  "product": "product",
-  "singleProduct": "single product",
-  "preview products": "Preview Products",
-  "searchProducts": "search products",
-  "company": "company",
-  "weight": "weight",
-  "quantity": "Quantity",
-  "color": "color",
-  "price": "Price",
-  "EAN": "EAN",
-  "model": "model",
-  "type": "type",
-  "controls": "controls",
-  "description": "Some Info About Product",
-  "productPrice": "product price",
-  "13digits": "(13 digits)",
-  "productCharacteristics": "Product Characteristics",
-  "backToCustomers": "back to list",
-  "freeShipping": "free shipping",
-  "active": "active",
-  "featured": "featured",
-  "30daysReturn": "30 days return",
-  "securePayment": "Secure payment",
-  "featuredProducts": "Featured products",
-  "itemsLeft.p1.o1": "items",
-  "itemsLeft.p1.o2": "items",
-  "itemsLeft.p1.o3": "items",
-  "itemsLeft.p2": " left",
-  "noStock": "Unfortunately, this item is out of stock",
-  "productDetails": "Product Details",
-  "priceHistory": "Price History",
-  "quantityHistory": "Quantity history",
-  "productsRecentChangePrice": "Products' recent price changes",
-  "productsRecentChangeQuantity": "Products' recent quantity changes",
-  "lastFiveItems": "Last 5 items",
-  "date": "Date",
+  "controls": "Controls",
+  "backToCustomers": "Back to list",
   "fullName": "Full Name",
   "name": "Name",
   "email":"Email",
@@ -51,27 +13,18 @@
   "street":"Street",
   "houseNumber":"House Number",
   "zip":"Zip",
-  "time": "Time",
-  "$":"$",
-  "units": "units",
-  "upload": "Upload",
-  "totalProducts": "total products",
   "noMatch": "Sorry, no registered customers found",
-  "noFeatured": "Sorry, no featured products are available",
-  "noData":"Sorry, No recorded data",
   "addNewCustomer": "Add new customer",
+  "yourCustomers":"Your customers",
   "saveChanges": "Save changes",
   "goBack": "Go back",
-  "deleteProduct": "Delete product",
+  "deleteCustomer": "Delete Customer",
   "registerNewUser": "Register",
-  "editProduct": "Edit product",
-  "viewProduct": "View product",
-  "openColorMenu": "Open color menu",
-  "fieldCannotBeEmpty": "field cannot be empty",
-  "positiveNumericalValue": "Input has to be a positive numerical value",
-  "numericalValue": "Input has to be a numerical value",
-  "textValue": "Input has to be a text value",
-  "activeOrNot": "Whether the product active or not",
-  "freeShippingOrNot": "Whether the delivery is free or not",
-  "featuredOrNot": "Whether the product should be presented on the front page or not"
+  "editCustomer": "Edit Customer",
+  "viewCustomer": "View Customer",
+  "fieldCannotBeEmpty": "Field cannot be empty",
+  "searchByFullName":"Search by customer's full name",
+  "customerInformation":"Customer Information",
+  "registerNewCustomer":"Register a new customer"
 }
+  
