--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -1,49 +1,11 @@
 {
   "welcome": "Adminsitruokite savo klientus",
   "customersManagement": "Klientų valdyba",
-  "ourProducts": "Mūsų prekės",
-  "about": "Apie mus",
-  "aboutApp": "apie mus",
+  "aboutApp": "Apie programėlę",
   "home": "Pagrindinis",
-  "customersList": "Prekių sąrašas",
-  "products": "Prekės",
-  "product": "Prekė",
-  "singleProduct": "Prekės peržiūra",
-  "preview products": "Prekių peržiūra",
-  "searchProducts": "ieškoti prekių",
-  "company": "gamintojas",
-  "weight": "svoris",
-  "quantity": "Kiekis",
-  "color": "spalva",
-  "model": "modelis",
-  "$": "$",
-  "type": "tipas",
-  "controls": "valdymas",
-  "nameOfProduct": "Prekės pavadinimas",
-  "description": "Informacija apie prekę",
-  "productPrice": "prekės kaina",
-  "13digits": "(13 skaitmenų)",
-  "productCharacteristics": "Prekės Characteristikos",
-  "backToCustomers": "atgal į prekių peržiūrą",
-  "freeShipping": "nemokamas pristatymas",
-  "active": "aktyvus",
-  "featured": "matomas",
-  "30daysReturn": "30 dienų pinigų grąžinimo garantija",
-  "securePayment": "Saugus apmokėjimas",
-  "featuredProducts": "Matomos prekės",
-  "itemsLeft.p1.o1": "prekė",
-  "itemsLeft.p1.o2": "prekės",
-  "itemsLeft.p1.o3": "prekių",
-  "itemsLeft.p2": " sandėlyje",
-  "noStock": "Apgailestaujame, prekės sandelyje nėra ",
-  "productDetails": "Prekės",
-  "priceHistory": "Prekių kainų kitimas",
-  "price": "Kaina",
-  "EAN": "EAN",
-  "quantityHistory": "Prekių kiekio kitimas",
-  "productsRecentChangePrice": "Naujausi prekių kainos kitimai",
-  "lastFiveItems": "Paskutiniai 5 kitimai",
-  "date": "Data",
+  "customersList": "Klientų sąrašas",
+  "controls": "Valdymas",
+  "backToCustomers": "Atgal į prekių peržiūrą",
   "fullName": "Vardas, pavardė",
   "name": "Vardas",
   "email": "Pašto adresas",
@@ -51,27 +13,17 @@
   "street": "Gatvė",
   "houseNumber": "Namo Numeris",
   "zip": "Pašto adresas",
-  "productsRecentChangeQuantity": "Naujausi prekių kiekio kitimai",
-  "time": "Laikas",
-  "units": "vienetai",
-  "upload": "Įkelti",
-  "totalProducts": "iš viso prekių",
   "noMatch": "Atsiprašome, neradome prekės pagal jūsų pageidavimą",
-  "noFeatured": "Atsiprašome, šiuo metu pagrindinių prekių nėra",
-  "noData": "Duomenų nėra",
   "addNewCustomer": "Pridėti naują klientą",
+  "yourCustomers": "Jūsų klientai",
   "saveChanges": "Išsaugoti",
   "goBack": "Atgal",
-  "deleteProduct": "Ištrinti prekę",
+  "deleteCustomer": "Ištrinti klientą",
   "registerNewUser": "Registracija",
-  "editProduct": "Redaguoti prekę",
-  "viewProduct": "Žiūrėti prekę",
-  "openColorMenu": "Spalvų paletė",
-  "fieldCannotBeEmpty": "laukelis negali būti tuščias",
-  "positiveNumericalValue": "Vertė laukelyje turi būti teigiamas skaičius",
-  "numericalValue": "Vertė laukelyje turi būti skaičius",
-  "textValue": "Vertė laukelyje turi būti tektas",
-  "activeOrNot": "Produktas aktyvus/neaktyvus",
-  "freeShippingOrNot": "Pristatymas mokamas/nemokamas",
-  "featuredOrNot": "Prekė bus rodoma/nerodoma pirmame puslapyje"
+  "editCustomer": "Redaguoti klientą",
+  "viewCustomer": "Žiūrėti klientą",
+  "fieldCannotBeEmpty": "Laukelis negali būti tuščias",
+  "searchByFullName": "Ieškoti pagal kliento vardą",
+  "customerInformation": "Kliento informacija",
+  "registerNewCustomer": "Naujo kliento registracija"
 }
