--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -8,7 +8,7 @@
   "backToCustomers": "Atgal į klientų peržiūrą",
   "fullName": "Vardas, pavardė",
   "name": "Vardas",
-  "email": "Pašto adresas",
+  "email": "Email adresas",
   "city": "Miestas",
   "street": "Gatvė",
   "houseNumber": "Namo Numeris",
